feat: enable urls env

--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -26,4 +26,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Ping urls
+        env:
+            URLS: ${{ secrets.URLS }}
         run: python pinger.py
